--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,16 +1,18 @@
 body{
     background-size: auto;
     background-repeat: no-repeat;
-    /*background-color: rgb(33, 37, 43);*/
-    /*background-image: url(assets/fire-particles-bg.png);*/
-    background-image: url(assets/bg.png);
+    /*background-color: rgb(33, 37, 43);
+    background-image: url(assets/fire-particles-bg.png);
+    background-image: url(assets/bg.png);*/
+    background-color: #31353d;
+    background-position: fixed;
     background-size: cover;
     font-family: 'Poppins', sans-serif;
-    overflow: hidden;
+    overflow-y: scroll;
 }
 
 .navbar{
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
@@ -20,6 +22,7 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 100;
 }
 
 .navbar #site_name{
@@ -124,12 +127,12 @@ body{
     transform: translateY(-50%);
 }
 
-.deposit:hover,.sign-in:hover,.withdraw:hover{
+.deposit:hover,.sign-in:hover,.withdraw:hover,.buttons button:hover{
     transform: translateY(-2%);
 }
 
 .chat{
-    position: absolute;
+    position: fixed;
     background-color: rgb(34, 39, 45);
     top: 0;
     left: 0;
@@ -177,4 +180,48 @@ body{
 
 .type-box input:focus{
     outline: none;
+}
+
+#active-flips{
+    position: absolute;
+    width: 75%;
+    height: auto;
+    left: 20%;
+    top: 25%;
+}
+
+.flip{
+    position: relative;
+    background-color: rgb(34, 39, 45);
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 150px;
+    color: snow;
+    margin-bottom: 2%;
+}
+
+.buttons button{
+    transition: all ease 0.2s;
+    position: absolute;
+    left: 20%;
+    top: 15%;
+    cursor: pointer;
+    height: 5%;
+    width: 8%;
+    background-color: rgb(29, 33, 38);
+    border: none;
+    color: snow;
+    border-radius: 7px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    font-size: medium;
+}
+
+.buttons #create-game{
+    background-color: rgb(0, 199, 77);
+}
+
+.buttons #view-history{
+    left: 30%;
 }
