--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,6 +25,18 @@ body{
     z-index: 100;
 }
 
+.inventory-box{
+    position: absolute;
+    background-color: rgb(34, 39, 45);
+    height: 25%;
+    width: 20%;
+    right: 8%;
+    top: 11%;
+    text-align: center;
+    color: #31353d;
+    z-index: -1;
+}
+
 .navbar #site_name{
     padding-left: 3%;
 }
