--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,13 @@
+html, body{
+    padding: 0;
+    margin: 0;
+    height: 100%;
+    width: 100%;
+}
+
 body{
     background-size: auto;
     background-repeat: no-repeat;
-    /*background-color: rgb(33, 37, 43);
-    background-image: url(assets/fire-particles-bg.png);
-    background-image: url(assets/bg.png);*/
     background-color: #31353d;
     background-position: fixed;
     background-size: cover;
@@ -22,10 +26,10 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    z-index: 100;
+    z-index: 1;
 }
 
-.inventory-box{
+#inventory-box{
     position: absolute;
     background-color: rgb(34, 39, 45);
     height: 25%;
@@ -34,7 +38,7 @@ body{
     top: 11%;
     text-align: center;
     color: #31353d;
-    z-index: -1;
+    z-index: -1 !important;
 }
 
 .navbar #site_name{
