--- a/stylesheet.css
+++ b/stylesheet.css
@@ -30,7 +30,7 @@ body{
 }
 
 #inventory-box{
-    position: absolute;
+    position: fixed;
     background-color: rgb(34, 39, 45);
     height: 25%;
     width: 20%;
@@ -38,7 +38,19 @@ body{
     top: 11%;
     text-align: center;
     color: #31353d;
-    z-index: -1 !important;
+    border-style: solid;
+    border-color: rgb(29, 33, 38);
+    z-index: 1;
+    display: none;
+}
+
+#inventory-box h1{
+    padding: 0;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .navbar #site_name{
@@ -125,7 +137,7 @@ body{
     height: 45%;
     width: auto;
     background-color: rgb(49, 53, 61);
-    width: 20%;
+    width: 15%;
     border-radius: 7px;
     cursor: pointer;
     display: flex;
@@ -146,11 +158,13 @@ body{
     position: relative;
     width: 15%;
     height: 20%;
-    top: 50%;
-    transform: translateY(-50%);
+    top: 40%;
+    right: 10%;
+    transition-duration: 0.5s;
+    transition-property: transform;
 }
 
-.deposit:hover,.sign-in:hover,.withdraw:hover,.buttons button:hover{
+.deposit:hover,.sign-in:hover,.withdraw:hover,.buttons button:hover,.inventory:hover{
     transform: translateY(-2%);
 }
 
@@ -161,7 +175,6 @@ body{
     left: 0;
     width: 15%;
     height: 100%;
-    z-index: -1;
 
     display: flex;
     justify-content: center;
