--- a/stylesheet.css
+++ b/stylesheet.css
@@ -42,6 +42,7 @@ body{
     border-color: rgb(29, 33, 38);
     z-index: 1;
     display: none;
+    filter: drop-shadow(0 0 2px black);
 }
 
 #inventory-box h1{
@@ -130,6 +131,7 @@ body{
     font-family: 'Poppins', sans-serif;
     font-weight: bold;
     font-size: medium;
+    filter: drop-shadow(0 0 3px rgb(0, 199, 77));
 }
 
 .inventory{
@@ -256,6 +258,7 @@ body{
 
 .buttons #create-game{
     background-color: rgb(0, 199, 77);
+    filter: drop-shadow(0 0 3px rgb(0, 199, 77));
 }
 
 .buttons #view-history{
