--- a/stylesheet.css
+++ b/stylesheet.css
@@ -141,7 +141,7 @@ body{
     font-family: 'Poppins', sans-serif;
     font-weight: bold;
     font-size: medium;
-    filter: drop-shadow(0 0 3px rgb(0, 199, 77));
+    filter: drop-shadow(0 0 7px rgba(0, 199, 77, 0.5));
 }
 
 .inventory{
@@ -291,7 +291,7 @@ body{
 
 .buttons #create-game{
     background-color: rgb(0, 199, 77);
-    filter: drop-shadow(0 0 3px rgb(0, 199, 77));
+    filter: drop-shadow(0 0 7px rgba(0, 199, 77, 0.5));
 }
 
 .buttons #view-history{
